[gd_scene load_steps=3 format=3 uid="uid://bviptfref5tp"]

[ext_resource type="Script" path="res://mainmenu/level_button.gd" id="1_3ypm7"]
[ext_resource type="Texture2D" uid="uid://dhr17umh3odh4" path="res://mainmenu/play_level.png" id="2_6swbn"]

[node name="LevelButton" type="Control"]
custom_minimum_size = Vector2(640, 96)
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 96.0
script = ExtResource("1_3ypm7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.317647, 0.317647, 0.317647, 1)

[node name="Content" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Info" type="VBoxContainer" parent="Content"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -29.0
offset_right = 120.0
offset_bottom = 29.0
grow_vertical = 2

[node name="LabelTitle" type="Label" parent="Content/Info"]
layout_mode = 2
text = "Title"

[node name="LabelPercent" type="Label" parent="Content/Info"]
layout_mode = 2
theme_override_colors/font_color = Color(0.694118, 0.784314, 1, 1)
text = "0%"

[node name="ButtonPlay" type="Button" parent="Content"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -32.0
offset_right = -16.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
mouse_default_cursor_shape = 2
icon = ExtResource("2_6swbn")
icon_alignment = 2

[connection signal="pressed" from="Content/ButtonPlay" to="." method="_on_button_play_pressed"]
